Fixed nav bar bug
bg of map was covering buttons, so sent it to a lower z-index. also cleaned up some repetition in the css files and moved the navbar and the map into inside the body tags

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ body {
 /*--- navigation bar ---*/
 .navbar {
   background: black;
+  z-index:5;
 }
 .nav-link,
 .navbar-brand {
