--- a/home.css
+++ b/home.css
@@ -16,30 +16,6 @@
     width: 400px;
 }
 
-body {
-    padding: 0;
-    margin: 0;
-    background: white;
-  }
-  /*--- navigation bar ---*/
-  .navbar {
-    background: black;
-  }
-  .nav-link,
-  .navbar-brand {
-    color: white;
-    cursor: pointer;
-  }
-  .nav-link {
-    margin-right: 1em !important;
-  }
-  .nav-link:hover {
-    color: gray;
-  }
-  .navbar-collapse {
-    justify-content: flex-end;
-  }
-
 #us-map {
     display: block;
     position: absolute;
@@ -47,6 +23,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+    z-index:0;
 }
 
 path:hover, 
